# NetworkCamera

./: rtc.conf
HttpClientConcreteUnitTest/: CMakeLists.txt
HttpClientConcreteUnitTest/src/: HttpClientConcreteUnitTest.cpp
ImageDump/: .project  CMakeLists.txt  ImageDump.conf  README.ImageDump  RTC.xml  rtc.conf
ImageDump/cmake/: imagedump-config.cmake.in  wix.xsl.in
ImageDump/doc/: conf.py.in
ImageDump/doc/content/: index.txt  index_j.txt
ImageDump/include/: CMakeLists.txt
ImageDump/include/ImageDump/: CMakeLists.txt  ImageDump.h
ImageDump/src/: CMakeLists.txt  ImageDump.cpp  ImageDumpComp.cpp
NetworkCameraUtility/: CMakeLists.txt  HttpClientConcrete.cpp  HttpClientConcrete.h  NetworkCameraUtility.sln  string_utility.cpp  string_utility.h
NetworkCameraUtility/NetworkCameraUtility/: HttpClient.cpp  HttpClient.h  HttpClientConcrete.cpp  HttpClientConcrete.h  NetworkCameraUtility.vcxproj  NetworkCameraUtility.vcxproj.filters  ReadMe.txt  string_utility.cpp  string_utility.h  utility_dll_defs.h
NetworkCameraUtility/NetworkCameraUtilitySample/: NetworkCameraUtilitySample.cpp  NetworkCameraUtilitySample.vcxproj  NetworkCameraUtilitySample.vcxproj.filters  ReadMe.txt
NetworkCameraUtility/include/: HttpClient.h  HttpClientConcrete.h  TimeoutBlockingClient.h
NetworkCameraUtility/src/: HttpClient.cpp  HttpClientConcrete.cpp  TimeoutBlockingClient.cpp
NetworkCameraUtilityUnitTest/HttpClientConcreteUnitTest/: CMakeLists.txt
NetworkCameraUtilityUnitTest/HttpClientConcreteUnitTest/src/: HttpClientConcreteUnitTest.cpp  TimeoutBlockingClientStub.cpp
NetworkCameraUtilityUnitTest/HttpClientUnitTest/: CMakeLists.txt
NetworkCameraUtilityUnitTest/HttpClientUnitTest/src/: HttpClientUnitTest.cpp
NetworkCameraUtilityUnitTest/StringUtilityUnitTest/: CMakeLists.txt
NetworkCameraUtilityUnitTest/TimeoutBlockingClientUnitTest/: CMakeLists.txt
NetworkCameraUtilityUnitTest/TimeoutBlockingClientUnitTest/src/: TimeoutBlockingClientUnitTest.cpp
NetworkCameraUtilityUnitTest/TimeoutBlockingClientUnitTest/test_data/: response.txt  response_read_test.txt
PanasonicNetworkCamera/: PanasonicNetworkCamera.sln
PanasonicNetworkCamera/PanasonicNetworkCamera/: PanasonicNetworkCamera.cpp  PanasonicNetworkCamera.h  PanasonicNetworkCamera.vcxproj  PanasonicNetworkCamera.vcxproj.filters  ReadMe.txt  main.cpp
PanasonicRtComponent/: CMakeLists.txt  PanasonicNetworkCameraRt.conf  README.PanasonicNetworkCameraRt  RTC.xml
PanasonicRtComponent/cmake/: wix.xsl.in
PanasonicRtComponent/doc/content/: index.txt  index_j.txt
PanasonicRtComponent/include/PanasonicNetworkCameraRt/: CMakeLists.txt  PanasonicNetworkCamera.h  PanasonicNetworkCameraRt.h
PanasonicRtComponent/src/: CMakeLists.txt  PanasonicNetworkCamera.cpp  PanasonicNetworkCameraRt.cpp  PanasonicNetworkCameraRtComp.cpp
PanasonicRtComponentUnitTest/PanasonicNetworkCameraUnitTest/: CMakeLists.txt
PanasonicRtComponentUnitTest/PanasonicNetworkCameraUnitTest/src/: HttpClientStub.cpp  PanasonicNetworkCameraUnitTest.cpp
PtzfbIn/: .project  CMakeLists.txt  README.ptzfb_test  RTC.xml  ptzfb_test.conf  rtc.conf
PtzfbIn/cmake/: ptzfb_test-config.cmake.in  wix.xsl.in
PtzfbIn/doc/: conf.py.in
PtzfbIn/doc/content/: index.txt  index_j.txt
PtzfbIn/include/: CMakeLists.txt
PtzfbIn/include/ptzfb_test/: CMakeLists.txt  ptzfb_test.h
PtzfbIn/src/: CMakeLists.txt  ptzfb_test.cpp  ptzfb_testComp.cpp
SonyNetworkCamera/: SonyNetworkCamera.sln
SonyNetworkCamera/SonyNetworkCamera/: IntBounds.h  ReadMe.txt  SonyNetworkCamera.cpp  SonyNetworkCamera.h  SonyNetworkCamera.vcxproj  SonyNetworkCamera.vcxproj.filters  main.cpp
SonyRtComponent/: CMakeLists.txt
SonyRtComponent/include/SonyNetworkCameraRt/: CMakeLists.txt  SonyNetworkCamera.h  SonyNetworkCameraRt.h
SonyRtComponent/src/: CMakeLists.txt  SonyNetworkCamera.cpp  SonyNetworkCameraRt.cpp  SonyNetworkCameraRtComp.cpp
SonyRtComponentUnitTest/IntBoundsUnitTest/: CMakeLists.txt
SonyRtComponentUnitTest/IntBoundsUnitTest/src/: IntBoundsUnitTest.cpp
SonyRtComponentUnitTest/SonyNetworkCameraUnitTest/: CMakeLists.txt
SonyRtComponentUnitTest/SonyNetworkCameraUnitTest/src/: HttpClientStub.cpp  SonyNetworkCameraUnitTest.cpp
StringUtilityUnitTest/src/: string_utility_unittest.cpp
TimeoutBlockingClientUnitTest/: CMakeLists.txt
TimeoutBlockingClientUnitTest/src/: TimeoutBlockingClientUnitTest.cpp
network_camera_utility_test/HttpClientConcreteUnitTest/src/: HttpClientConcreteUnitTest.cpp  TimeoutBlockingClientStub.cpp
network_camera_utility_test/HttpClientUnitTest/: CMakeLists.txt
network_camera_utility_test/HttpClientUnitTest/src/: HttpClientConcreteStub.cpp  HttpClientUnitTest.cpp
network_camera_utility_test/StringUtilityUnitTest/: CMakeLists.txt
network_camera_utility_test/StringUtilityUnitTest/src/: string_utility_unittest.cpp
network_camera_utility_test/TimeoutBlockingClientUnitTest/: CMakeLists.txt
